--- a/frontend-vue/package.json
+++ b/frontend-vue/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "date-fns": "^1.30.1",
+    "humanize-duration": "^3.20.1",
     "vee-validate": "^2.2.13",
     "vue": "^2.6.10",
     "vue-plyr": "^5.1.3",
