--- a/.tmuxp.yaml
+++ b/.tmuxp.yaml
@@ -1,5 +1,8 @@
 session_name: escapepod
 windows:
+  - window_name: docker
+    panes:
+      - docker-compose -f docker-compose-dev.yml up
   - window_name: frontend
     panes:
       - cd frontend-vue && yarn serve
